--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: content-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+    display: flex;
+    min-height: 100vh;
+    min-width: 100vw;
 }
